added a new js for login functionality

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     </main>
     <script src="script.js"></script>
     <script src="newTodo.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
