--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Todo app</title>
+    <title>Todo app</title>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
