added a reminder to the bottom of the website

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
       </div>
       <p class="footer small-size">Drag and Drop to Reorder</p>
+      <p class="footer small-size">Note: In order to save your todos, please remember to log in.</p>
     </main>
     <script src="script.js"></script>
     <script src="newTodo.js"></script>
