added login and register buttons to desktop version of the website

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <body>
     <div class="top-img"></div>
     <main>
+      <div class="button--div">
+      <button class="button">Login</button>
+      <button class="button">Register</button>
+    </div>
       <div class="header">
         <h1>TODO</h1>
         <div onclick="changeTheme()" class="tgl-btn"></div>
