added hamburger menu to mobile site

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   <body>
     <div class="top-img"></div>
     <main>
+      <nav>
+        <div class="menu-btn">
+          <div class="dropdown_content menu-items">
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Register</a></li>
+          </div>
+          <div class="menu-btn__burger">
+          </div>
+        </div>
+        </nav>
       <div class="button--div">
       <button class="button">Login</button>
       <button class="button">Register</button>
@@ -51,5 +61,6 @@
     <script src="script.js"></script>
     <script src="newTodo.js"></script>
     <script src="login.js"></script>
+    <script src="mobilenav.js"></script>
   </body>
 </html>
