small changes, no difference to functionality

--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
     <title>Todo app</title>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <link rel="stylesheet" href="style.css" />
@@ -37,13 +31,7 @@
       </div>
       <div class="type-todo">
         <div id="submit"></div>
-        <input
-          type="text"
-          aria-label="todo-input"
-          id="todo-input"
-          name="todo-input"
-          placeholder="Create a new todo"
-        />
+        <input type="text" aria-label="todo-input" id="todo-input" name="todo-input" placeholder="Create a new todo"/>
       </div>
       <div class="todos"></div>
       <div class="remarks">
