--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
-    <title>Todo app</title>
+    <title>Todo - Easier Way To Keep Track of Your Todos!</title>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
